add recommendations