@@ -9,8 +9,10 @@ import ru.practicum.entity.UserAction;
 import ru.practicum.ewm.stats.proto.*;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,113 +22,123 @@ public class AnalyzerService {
     private final UserActionRepository userActionRepository;
 
     public Iterable<RecommendedEventProto> getRecommendationsForUser(UserPredictionsRequestProto request) {
-        int userId = request.getUserId();
-        int limit = request.getLimit();
+        long userId = request.getUserId();
+        int maxResults = request.getMaxResults();
 
-        List<UserAction> userActions = userActionRepository.findAll().stream()
-                .filter(action -> action.getUserId().equals((long) userId))
-                .toList();
-
-        Map<Integer, Double> eventWeights = userActions.stream()
-                .collect(Collectors.toMap(
-                        action -> action.getEventId().intValue(),
-                        UserAction::getTotalWeight,
-                        Math::max
-                ));
-
-        List<Similarities> allSimilarities = similaritiesRepository.findAll().stream().toList();
-
-        if (eventWeights.isEmpty()) {
+        List<UserAction> userActions = userActionRepository.findByUserId(userId);
+        if (userActions.isEmpty()) {
             return List.of();
         }
 
-        Integer firstEventId = eventWeights.keySet().iterator().next();
+        Set<Long> interactedEventIds = userActions.stream()
+                .map(UserAction::getEventId)
+                .collect(Collectors.toSet());
 
-        Map<Integer, List<Similarities>> eventSimilaritiesMap = allSimilarities.stream()
-                .filter(sim -> sim.getEventA().equals((long) firstEventId) || sim.getEventB().equals((long) firstEventId))
-                .collect(Collectors.groupingBy(sim ->
-                        sim.getEventA().equals((long) firstEventId) ? sim.getEventB().intValue() : sim.getEventA().intValue()
-                ));
+        Map<Long, Double> userRatings = userActions.stream()
+                .collect(Collectors.toMap(UserAction::getEventId, UserAction::getTotalWeight));
 
-        Map<Integer, Double> scoredEvents = eventWeights.keySet().stream()
-                .flatMap(eventId -> eventSimilaritiesMap.getOrDefault(eventId, List.of()).stream()
-                        .map(sim -> Map.entry(
-                                sim.getEventA().equals((long) eventId) ? sim.getEventB().intValue() : sim.getEventA().intValue(),
-                                sim.getScore() * eventWeights.get(eventId)
-                        )))
-                .collect(Collectors.groupingBy(
-                        Map.Entry::getKey,
-                        Collectors.summingDouble(Map.Entry::getValue)
-                ));
+        List<Similarities> allSimilarities = similaritiesRepository.findAll();
 
-        return scoredEvents.entrySet().stream()
-                .sorted(Map.Entry.<Integer, Double>comparingByValue().reversed())
-                .limit(limit)
-                .map(entry -> RecommendedEventProto.newBuilder()
-                        .setEventId(entry.getKey())
-                        .setPredictedRating(entry.getValue())
-                        .build())
+        Map<Long, Double> candidateMaxSimilarity = new HashMap<>();
+        for (Similarities sim : allSimilarities) {
+            for (UserAction action : userActions) {
+                Long candidateId = sim.getEventA().equals(action.getEventId()) ? sim.getEventB() : sim.getEventA();
+                if (interactedEventIds.contains(candidateId)) continue;
+                double currentMax = candidateMaxSimilarity.getOrDefault(candidateId, 0.0);
+                if (sim.getScore() > currentMax) {
+                    candidateMaxSimilarity.put(candidateId, sim.getScore());
+                }
+            }
+        }
+
+        if (candidateMaxSimilarity.isEmpty()) {
+            return List.of();
+        }
+
+        List<Long> topCandidates = candidateMaxSimilarity.entrySet().stream()
+                .sorted(Map.Entry.<Long, Double>comparingByValue().reversed())
+                .limit(maxResults)
+                .map(Map.Entry::getKey)
                 .toList();
+
+        List<RecommendedEventProto> result = new ArrayList<>();
+        for (Long candidateId : topCandidates) {
+            double predictedScore = predictScore(candidateId, userRatings);
+            if (predictedScore > 0) {
+                result.add(RecommendedEventProto.newBuilder()
+                        .setEventId(candidateId.intValue())
+                        .setScore(predictedScore)
+                        .build());
+            }
+        }
+        return result;
+    }
+
+    private double predictScore(Long eventId, Map<Long, Double> userRatings) {
+        List<Similarities> similarities = similaritiesRepository.findByEventId(eventId);
+
+        double weightedSum = 0.0;
+        double similaritySum = 0.0;
+
+        for (Similarities sim : similarities) {
+            Long similarEventId = sim.getEventA().equals(eventId) ? sim.getEventB() : sim.getEventA();
+            if (userRatings.containsKey(similarEventId)) {
+                double rating = userRatings.get(similarEventId);
+                weightedSum += sim.getScore() * rating;
+                similaritySum += sim.getScore();
+            }
+        }
+
+        if (similaritySum > 0) {
+            return weightedSum / similaritySum;
+        }
+        return 0.0;
     }
 
     public Iterable<RecommendedEventProto> getSimilarEvents(SimilarEventsRequestProto request) {
-        int eventId = request.getEventId();
-        int userId = request.getUserId();
-        int limit = request.getLimit();
+        long eventId = request.getEventId();
+        long userId = request.getUserId();
+        int maxResults = request.getMaxResults();
 
-        List<UserAction> userActions = userActionRepository.findAll().stream()
-                .filter(action -> action.getUserId().equals((long) userId))
-                .toList();
+        List<UserAction> userActions = userActionRepository.findByUserId(userId);
+        Set<Long> interactedEventIds = userActions.stream()
+                .map(UserAction::getEventId)
+                .collect(Collectors.toSet());
 
-        Map<Integer, Double> userEventWeights = userActions.stream()
-                .collect(Collectors.toMap(
-                        action -> action.getEventId().intValue(),
-                        UserAction::getTotalWeight,
-                        Math::max
-                ));
+        List<Similarities> similarities = similaritiesRepository.findByEventId(eventId);
 
-        List<Similarities> similarities = similaritiesRepository.findAll().stream()
-                .filter(sim -> sim.getEventA().equals((long) eventId) || sim.getEventB().equals((long) eventId))
-                .toList();
-
-        return similarities.stream()
-                .filter(sim -> !userEventWeights.containsKey(
-                        sim.getEventA().equals((long) eventId) ? sim.getEventB().intValue() : sim.getEventA().intValue()
-                ))
-                .map(sim -> {
-                    int similarEventId = sim.getEventA().equals((long) eventId) ?
-                            sim.getEventB().intValue() : sim.getEventA().intValue();
-                    return RecommendedEventProto.newBuilder()
-                            .setEventId(similarEventId)
-                            .setSimilarityCoefficient(sim.getScore())
-                            .build();
-                })
-                .sorted((a, b) -> Double.compare(b.getSimilarityCoefficient(), a.getSimilarityCoefficient()))
-                .limit(limit)
-                .toList();
+        List<RecommendedEventProto> result = new ArrayList<>();
+        for (Similarities sim : similarities) {
+            Long similarId = sim.getEventA().equals(eventId) ? sim.getEventB() : sim.getEventA();
+            if (!interactedEventIds.contains(similarId)) {
+                result.add(RecommendedEventProto.newBuilder()
+                        .setEventId(similarId.intValue())
+                        .setScore(sim.getScore())
+                        .build());
+            }
+        }
+        result.sort((a, b) -> Double.compare(b.getScore(), a.getScore()));
+        return result.stream().limit(maxResults).collect(Collectors.toList());
     }
 
     public Iterable<RecommendedEventProto> getInteractionsCount(InteractionsCountRequestProto request) {
-        List<Integer> eventIds = request.getEventIdsList().stream()
-                .toList();
+        List<Long> eventIds = request.getEventIdList().stream()
+                .map(Integer::longValue)
+                .collect(Collectors.toList());
 
-        List<UserAction> userActions = userActionRepository.findAll().stream()
-                .filter(action -> eventIds.contains(action.getEventId().intValue()))
-                .toList();
-
-        Map<Integer, Double> eventMaxWeights = userActions.stream()
+        List<Object[]> results = userActionRepository.sumMaxWeightByEventIdsGrouped(eventIds);
+        Map<Long, Double> scoreMap = results.stream()
                 .collect(Collectors.toMap(
-                        action -> action.getEventId().intValue(),
-                        UserAction::getTotalWeight,
-                        Math::max
+                        row -> (Long) row[0],
+                        row -> (Double) row[1]
                 ));
 
         List<RecommendedEventProto> result = new ArrayList<>();
-        for (Integer eventId : eventIds) {
-            Double weight = eventMaxWeights.getOrDefault(eventId, 0.0);
+        for (Long eventId : eventIds) {
+            Double score = scoreMap.getOrDefault(eventId, 0.0);
             result.add(RecommendedEventProto.newBuilder()
-                    .setEventId(eventId)
-                    .setInteractionsCount(weight.intValue())
+                    .setEventId(eventId.intValue())
+                    .setScore(score)
                     .build());
         }
         return result;
